[gd_scene load_steps=9 format=3 uid="uid://dd7eaqliw6hri"]

[ext_resource type="Script" path="res://Principal.gd" id="1_pwoxb"]
[ext_resource type="Script" path="res://Board.gd" id="2_jrtkd"]
[ext_resource type="Shader" path="res://Mix.gdshader" id="2_rac50"]
[ext_resource type="PackedScene" uid="uid://bc4rfgx3y2lqt" path="res://FinalTextureViewport.tscn" id="4_ggds6"]
[ext_resource type="PackedScene" uid="uid://iqbgf572narl" path="res://BoardImage.tscn" id="5_tqme0"]
[ext_resource type="PackedScene" uid="uid://cjfpusofae634" path="res://ConstrastViewport.tscn" id="6_rsk2m"]
[ext_resource type="PackedScene" uid="uid://dcps36vu841gx" path="res://EdgesViewport.tscn" id="6_xbc8a"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_auyao"]
shader = ExtResource("2_rac50")
shader_parameter/can_mix = false

[node name="Node2D" type="Node2D"]
script = ExtResource("1_pwoxb")

[node name="Board" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_auyao")
position = Vector2(1000, 0)
scale = Vector2(0.72, 0.9)
script = ExtResource("2_jrtkd")

[node name="SubViewportMaskContainer" type="SubViewportContainer" parent="."]
offset_left = 1070.0
offset_top = 285.0
offset_right = 2670.0
offset_bottom = 1185.0
scale = Vector2(0.5, 0.5)

[node name="SubViewport" type="SubViewport" parent="SubViewportMaskContainer"]
handle_input_locally = false
size = Vector2i(1600, 900)
render_target_update_mode = 4

[node name="Node2D" parent="SubViewportMaskContainer/SubViewport" instance=ExtResource("4_ggds6")]

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1800, 500)

[node name="SubViewportBoardContainer" type="SubViewportContainer" parent="."]
offset_left = 388.0
offset_top = 1493.0
offset_right = 1988.0
offset_bottom = 2393.0
scale = Vector2(0.72, 0.9)

[node name="SubViewport" type="SubViewport" parent="SubViewportBoardContainer"]
handle_input_locally = false
size = Vector2i(1600, 900)
render_target_update_mode = 4

[node name="Node2D" parent="SubViewportBoardContainer/SubViewport" instance=ExtResource("5_tqme0")]

[node name="SubViewportContrastContainer" type="SubViewportContainer" parent="."]
offset_left = 2580.0
offset_top = 1828.0
offset_right = 4180.0
offset_bottom = 2728.0
scale = Vector2(0.72, 0.9)

[node name="SubViewport" type="SubViewport" parent="SubViewportContrastContainer"]
handle_input_locally = false
size = Vector2i(1600, 900)
render_target_update_mode = 4

[node name="Node2D" parent="SubViewportContrastContainer/SubViewport" instance=ExtResource("6_rsk2m")]

[node name="SubViewportEdgesContainer2" type="SubViewportContainer" parent="."]
offset_left = 2133.0
offset_top = 1344.0
offset_right = 3733.0
offset_bottom = 2244.0
scale = Vector2(0.72, 0.9)

[node name="SubViewport" type="SubViewport" parent="SubViewportEdgesContainer2"]
handle_input_locally = false
size = Vector2i(1600, 900)
render_target_update_mode = 4

[node name="Node2D" parent="SubViewportEdgesContainer2/SubViewport" instance=ExtResource("6_xbc8a")]

[node name="CheckButtonContrast" type="CheckButton" parent="."]
visible = false
offset_left = 1200.0
offset_top = 113.0
offset_right = 1244.0
offset_bottom = 137.0

[node name="LabelContrast" type="RichTextLabel" parent="."]
visible = false
offset_left = 1311.0
offset_top = 121.0
offset_right = 1538.0
offset_bottom = 161.0
text = "Show Contrast Image"

[node name="CheckButtonEdges" type="CheckButton" parent="."]
visible = false
offset_left = 1200.0
offset_top = 174.0
offset_right = 1244.0
offset_bottom = 198.0

[node name="RichTextLabel" type="RichTextLabel" parent="."]
visible = false
offset_left = 1308.0
offset_top = 169.0
offset_right = 1508.0
offset_bottom = 209.0
text = "Draw on Edges Image
"

[node name="RichTextLabelAUTOMATIC" type="RichTextLabel" parent="."]
visible = false
offset_left = 1298.0
offset_top = 68.0
offset_right = 1498.0
offset_bottom = 108.0
text = "Draw Automatically
"

[node name="RichTextLabelDeleteEdges" type="RichTextLabel" parent="."]
visible = false
offset_left = 1295.0
offset_top = 230.0
offset_right = 1495.0
offset_bottom = 270.0
text = "Delete Edges
"

[node name="CheckBoxDeleteEdges" type="CheckBox" parent="."]
visible = false
offset_left = 1217.0
offset_top = 230.0
offset_right = 1241.0
offset_bottom = 254.0

[node name="Button" type="Button" parent="."]
visible = false
offset_left = 1454.0
offset_top = 224.0
offset_right = 1530.0
offset_bottom = 260.0
text = "Save Image
"

[node name="ButtonGUI" type="Button" parent="."]
offset_left = 1206.0
offset_top = 17.0
offset_right = 1348.0
offset_bottom = 48.0
text = "Display Menu"

[node name="FileDialogSaveImage" type="FileDialog" parent="."]
position = Vector2i(450, 0)
size = Vector2i(600, 400)
access = 2

[node name="CheckButtonAuto" type="CheckButton" parent="."]
visible = false
offset_left = 1200.0
offset_top = 70.0
offset_right = 1244.0
offset_bottom = 94.0

[connection signal="toggled" from="CheckButtonContrast" to="." method="_on_check_button_toggled"]
[connection signal="toggled" from="CheckButtonEdges" to="." method="_on_check_button_edges_toggled"]
[connection signal="toggled" from="CheckBoxDeleteEdges" to="." method="_on_check_box_delete_edges_toggled"]
[connection signal="pressed" from="Button" to="." method="_on_button_save_pressed"]
[connection signal="pressed" from="ButtonGUI" to="." method="_on_button_gui_pressed"]
[connection signal="file_selected" from="FileDialogSaveImage" to="." method="_on_file_dialog_save_image_file_selected"]
[connection signal="toggled" from="CheckButtonAuto" to="." method="_on_check_button_auto_toggled"]
